--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@qamarz/gv-web-sdk": "^1.0.42",
+    "@qamarz/gv-web-sdk": "1.0.55",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^5.3.9"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.15.5",
